--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.testing">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,16 +19,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="SignUp"
-            android:label="@string/app_name">
-        </activity>
-
+            android:name=".SignUp"
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".VerifyNumber"
-            android:label="Testing"
-            />
+            android:label="Testing" />
+
+        <activity
+            android:name=".LandingPage"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
